# droidGL3

./: .gitignore  CMakeLists.txt  droidGL3.sln  droidGL3.vcxproj  droidGL3.vcxproj.filters  leakReport.txt  packages.config  suppression.asan
data/: TODO  gameprefs.ini
data/scripts/: commonDefines.h  conCommands.as  conGuiSetup.as  langEnglish.as  langItalian.as
data/shaders/: colorDisc.frag  colorDisc.vert  colorKey.frag  colorKey.vert  colorLine.frag  colorLine.vert  colorOnly.frag  colorOnly.vert  distanceField.frag  distanceField.vert  lightmapRender.frag  lightmapRender.vert  quad2D.frag  quad2D.vert  quad3D.vert  static.frag
hdr/console/: con_conScript.h  con_console.h
hdr/game/: gam_bullet.h  gam_database.h  gam_doors.h  gam_droidAI.h  gam_droidAIFlee.h  gam_droidAIHealth.h  gam_droidAIPatrol.h  gam_droidAIResume.h  gam_droidAIShoot.h  gam_droids.h  gam_events.h  gam_eventsClient.h  gam_eventsServer.h  gam_game.h  gam_healing.h  gam_levels.h  gam_lifts.h  gam_lightCaster.h  gam_lineOfSight.h  gam_pathFind.h  gam_physics.h  gam_physicsCollisions.h  gam_physicsPlayer.h  gam_player.h  gam_render.h  gam_renderDebug.h  gam_transfer.h  gui_deckView.h  s_droidAIPatrol.h  s_droids.h  s_gameEvents.h  s_gamePhysics.h  s_healing.h  s_hud.h  s_levels.h  s_lightCaster.h  s_movement.h  s_player.h  s_render.h  s_renderDebug.h  (+1 more)
hdr/gui/: gui_button.h  gui_checkBox.h  gui_label.h  gui_language.h  gui_main.h  gui_render.h  gui_renderTransfer.h  gui_scrollBox.h  gui_sideview.h  gui_terminal.h  gui_textBox.h
hdr/io/: io_fileSystem.h  io_gameprefs.h  io_keyboard.h  io_logfile.h  io_mouse.h  io_textures.h
hdr/io/minilzo/: lzoconf.h
hdr/io/simpleIni/: io_simpleIni.h
hdr/libGL/: gl_window.h
hdr/libGL/freetype-gl/: digitalFont.h  opengl.h  vera-16.h
hdr/libGL/glad/: glad.h
hdr/libGL/glm/: ext.hpp  glm.hpp
hdr/network/: net_client.h  net_common.h  net_server.h  net_serverData.h
hdr/network/raknet/: BitStream.h
hdr/opengl/: gl_fbo.h  gl_openGLWrap.h  gl_opengl.h  gl_renderSprite.h  gl_shaders.h  s_renderSprite.h
hdr/physfs/: physfs.h  physfs_casefolding.h  physfs_internal.h  physfs_lzmasdk.h  physfs_miniz.h
hdr/script/: angelscript.h  as_array.h  as_atomic.h  as_builder.h  as_bytecode.h  as_callfunc.h  as_compiler.h  as_config.h  as_configgroup.h  as_context.h  as_criticalsection.h  as_datatype.h  as_debug.h  as_gc.h  as_generic.h  as_map.h  as_memory.h  as_module.h  as_namespace.h  as_objecttype.h  as_outputbuffer.h  as_parser.h  as_property.h  as_restore.h  as_scriptarray.h  as_scriptbuilder.h  as_scriptcode.h  as_scriptengine.h  as_scriptfunction.h  as_scriptnode.h  as_scriptobject.h  as_string.h  as_string_util.h  as_symboltable.h  as_texts.h  as_thread.h  as_tokendef.h  as_tokenizer.h  as_typeinfo.h  as_variablescope.h  (+1 more)
hdr/system/: sys_audio.h  sys_defines.h  sys_embedFont.h  sys_events.h  sys_leakDetector.h  sys_main.h  sys_maths.h  sys_sdfFont.h  sys_shutdown.h  sys_startup.h  sys_timing.h  sys_utils.h
src/console/: con_comHelp.cpp  con_conScript.cpp  con_console.cpp  con_openGLInfo.cpp  con_quit.cpp  con_variables.cpp
src/game/: gam_bullet.cpp  gam_database.cpp  gam_doors.cpp  gam_droidAI.cpp  gam_droidAIFlee.cpp  gam_droidAIHealth.cpp  gam_droidAIPatrol.cpp  gam_droidAIResume.cpp  gam_droidAIShoot.cpp  gam_droidNetwork.cpp  gam_droids.cpp  gam_events.cpp  gam_eventsClient.cpp  gam_eventsServer.cpp  gam_game.cpp  gam_healing.cpp  gam_hud.cpp  gam_levels.cpp  gam_lifts.cpp  gam_lightCaster.cpp  gam_lineOfSight.cpp  gam_pathFind.cpp  gam_physics.cpp  gam_physicsCollisions.cpp  gam_physicsPlayer.cpp  gam_player.cpp  gam_render.cpp  gam_renderDebug.cpp  gam_transfer.cpp  s_doors.cpp  s_droidAIPatrol.cpp  s_droidNetwork.cpp  s_droidNetwork.h  s_droids.cpp  s_droids.h  s_game.cpp  s_gameEvents.cpp  s_gamePhysics.cpp  s_healing.cpp  s_hud.cpp  (+9 more)
src/gui/: SDL_ttf.c  gui_button.cpp  gui_checkBox.cpp  gui_deckView.cpp  gui_label.cpp  gui_language.cpp  gui_main.cpp  gui_render.cpp  gui_renderTransfer.cpp  gui_scrollBox.cpp  gui_sideview.cpp  gui_terminal.cpp  gui_textBox.cpp
src/io/: io_fileSystem.cpp  io_gameprefs.cpp  io_keyboard.cpp  io_logfile.cpp  io_mouse.cpp  io_textures.cpp
src/io/minilzo/: minilzo.c
src/io/simpleIni/: io_convertUTF.c
src/libGL/: gl_window.cpp
src/libGL/chipmunk/: cpHastySpace.c  cpPolyline.c
src/libGL/freetype-gl/: edtaa3func.c  font-manager.c  (+3 more)
src/network/: net_client.cpp  net_common.cpp  net_server.cpp  net_serverData.cpp  netcode.c
src/opengl/: gl_fbo.cpp  gl_openGLWrap.cpp  gl_opengl.cpp  gl_renderSprite.cpp  gl_shaders.cpp  s_renderSprite.cpp
src/physfs/: physfs.c  physfs_archiver_7z.c  physfs_archiver_dir.c  physfs_archiver_grp.c  physfs_archiver_hog.c  physfs_archiver_iso9660.c  physfs_archiver_mvl.c  physfs_archiver_qpak.c  physfs_archiver_slb.c  physfs_archiver_unpacked.c  physfs_archiver_vdf.c  physfs_archiver_wad.c  physfs_archiver_zip.c  physfs_byteorder.c  physfs_platform_haiku.cpp  physfs_platform_os2.c  physfs_platform_posix.c  physfs_platform_qnx.c  physfs_platform_unix.c  physfs_platform_windows.c  physfs_platform_winrt.cpp  physfs_unicode.c
src/script/: as_atomic.cpp  as_builder.cpp  as_bytecode.cpp  as_callfunc.cpp  as_callfunc_arm.cpp  as_callfunc_mips.cpp  as_callfunc_ppc.cpp  as_callfunc_ppc_64.cpp  as_callfunc_sh4.cpp  as_callfunc_x64_gcc.cpp  as_callfunc_x64_mingw.cpp  as_callfunc_x64_msvc.cpp  as_callfunc_x86.cpp  as_callfunc_xenon.cpp  as_compiler.cpp  as_configgroup.cpp  as_context.cpp  as_datatype.cpp  as_gc.cpp  as_generic.cpp  as_globalproperty.cpp  as_memory.cpp  as_module.cpp  as_objecttype.cpp  as_outputbuffer.cpp  as_parser.cpp  as_restore.cpp  as_scriptarray.cpp  as_scriptbuilder.cpp  as_scriptcode.cpp  as_scriptengine.cpp  as_scriptfunction.cpp  as_scriptnode.cpp  as_scriptobject.cpp  as_string.cpp  as_string_util.cpp  as_thread.cpp  as_tokenizer.cpp  as_typeinfo.cpp  as_variablescope.cpp  (+2 more)
src/system/: sys_audio.cpp  sys_embedFont.cpp  sys_events.cpp  sys_leakDetector.cpp  sys_main.cpp  sys_maths.cpp  sys_sdfFont.cpp  sys_shutdown.cpp  sys_startup.cpp  sys_timing.cpp  sys_utils.cpp
(+125 files in other folders)
